--- a/software.html
+++ b/software.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://apply.workable.com/agiletrailblazers/j/DD2503E8BA/?utm_campaign=ATB%20Job%20Openings&utm_content=104466869&utm_medium=social&utm_source=twitter&hss_channel=tw-512159904'>Lead Software Engineer - AgileTrailblazers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://referrals.ibm.com/ibmreppify/jobs/208825?bpin=1046&com=2&rin=1467367'>Job Profile - Senior Software Developer - IBM Security - MaaS360</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -83,11 +87,11 @@
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471431-senior-software-engineer'>SmartRecruiters Inc Senior Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471431-senior-software-engineer'>SmartRecruiters Inc Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471713-junior-software-engineer'>SmartRecruiters Inc Junior Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471713-junior-software-engineer'>SmartRecruiters Inc Junior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -203,7 +207,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://redlatticeinc.applytojob.com/apply/JlnTcxlGzh/Senior-Cyber-Software-Developer'>Senior Cyber Software Developer - REDLattice Inc - Career Page</a></h5> 
+<h5><a href='http://redlatticeinc.applytojob.com/apply/JlnTcxlGzh/Senior-Cyber-Software-Developer'>Senior Cyber Software Developer - REDLattice Inc - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -275,7 +279,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=opqbbfwV&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nK8coMwJ'>NICE Careers - Software Engineer - .NET Full Stack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=opqbbfwV&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nK8coMwJ'>NICE Careers - Software Engineer - .NET Full Stack</a></h5> 
 <p><span class="badge badge-light">Austin, Texas  Austin, TX</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -363,7 +367,7 @@
 <p><span class="badge badge-light">Santa Clara, CASanta Clara, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.womenwhocode.com/jobs/5423?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Principal Software Engineer, Web Platform - H-E-B Digital | Women Who Code</a></h5> 
+<h5><a href='https://www.womenwhocode.com/jobs/5423?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Principal Software Engineer, Web Platform - H-E-B Digital | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -429,7 +433,7 @@
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://flashrecruit.com/jobs/8115287'>Web Software Engineer in Chicago (Remote), Illinois - Chat Now Live with a Recruiter (Job #8115287) | FlashRecruit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://flashrecruit.com/jobs/8115287'>Web Software Engineer in Chicago (Remote), Illinois - Chat Now Live with a Recruiter (Job #8115287) | FlashRecruit</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago Chicago</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -438,10 +442,6 @@
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/realtor/67a90acc-cd67-4b2e-be5d-a80c01c23a51'>realtor.com - Senior Software Engineer   (Platform and Monetization)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/realtor/6c40b5b9-5371-43af-a35d-781928df09e9'>realtor.com - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
